package com.android.partagix.model.visibility

enum class Visibility(val visibilityLabel: String) {
  PUBLIC("Everyone"), // ordinal = 0
  PRIVATE("No one") // ordinal = 1
  //  FRIENDS("Friends only"), // ordinal = 2
}

/**
 * Get the Visibility given the visibilityLabel string.
 *
 * @param visibilityLabel the label of the visibility string
...
