...

  // These variables should stay var otherwise the counts are outdated in some cases
  var incomingRequests by remember { mutableIntStateOf(manageLoanViewModelIncoming.getCount()) }
  var outgoingRequests by remember { mutableIntStateOf(manageLoanViewModelOutgoing.getCount()) }

  Scaffold(
      modifier = modifier.testTag("inventoryScreen"),
      topBar = {
        TopSearchBar(
            filter = { inventoryViewModel.filterItems(it) },
            query = uiState.query,
            modifier = modifier.testTag("inventoryScreenSearchBarBack"))
      },
...
            selectedDestination = Route.INVENTORY,
            navigateToTopLevelDestination = navigationActions::navigateTo,
            modifier = modifier.testTag("inventoryScreenBottomNavBar"))
      },
      floatingActionButton = {
        FloatingActionButton(
            modifier = modifier.size(60.dp).testTag("inventoryScreenFab"),
            shape = FloatingActionButtonDefaults.largeShape,
            containerColor = MaterialTheme.colorScheme.primary,
            onClick = {
              val i = emptyItem
              itemViewModel.updateUiItem(i)
              navigationActions.navigateTo(Route.CREATE_ITEM)
...
